<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChessBoardFragment"
        android:orientation="vertical">

    <TextView
            android:text="Chess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:padding="3dp"
            android:gravity="center"/>



    <com.github.martinfrank.chessapp.ChessBoardView
            android:id="@+id/chessBoard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/white_player_name"
                android:layout_weight="1"/>

        <TextView
                android:id="@+id/text_white_player_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>
    </LinearLayout>

<!--    <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"/>-->

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/black_player_name"
                android:layout_weight="1"/>

        <TextView
                android:id="@+id/text_black_player_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/current_player_name"
                android:layout_weight="1"/>

        <TextView
                android:id="@+id/text_current_player_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>

    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/button_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_button"
                />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        <Button
                android:id="@+id/button_select_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_color_button"
                />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        <Button
                android:id="@+id/button_start_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_game_button"
                />
    </LinearLayout>

</LinearLayout>