<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StartFragment"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <TextView
                android:text="@string/list_servers"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="1"/>

        <Button
                android:text="@string/refresh_game_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_refresh"
                android:layout_weight="1"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/chess_servers"
            android:layout_height="0dp"
            android:layout_weight="10">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        <Button
                android:id="@+id/button_create_server"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/create_game"
                android:layout_weight="3"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        <Button
                android:id="@+id/button_settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/change_settings"
                android:layout_weight="3"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>


    </LinearLayout>
</LinearLayout>